Added banner, application.yml, junit properties and relevant dependencies